<resources>
    <string name="app_name">Covid19v1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bersatu_lawan_ncovid_19">Bersatu Melawan \nCovid 19</string>
    <string name="informasi_ncovid_19">Informasi \nCovid-19</string>
    <string name="welcome">Selamat Datang</string>
    <string name="dummy_name">Hendrawan Wibowo</string>
    <string name="indonesia">Indonesia</string>
    <string name="confirmed">Positif</string>
    <string name="dummy_number">0</string>
    <string name="recovered">Sembuh</string>
    <string name="deaths">Meninggal</string>
    <string name="world">Dunia</string>
    <string name="rumah_sakit_rujukan">Rumah Sakit Rujukan</string>
    <string name="kontak_layanan">Kontak Layanan</string>
    <string name="statistik_ncovid_19">Statistik \nCovid-19</string>
    <string name="cari_data">Cari Data</string>
    <string name="tampilkan_data">Tampilkan Data</string>
    <string name="activity_piechart">Piechart Data</string>
    <string name="title_data_worldwide">Seluruh Data Dunia</string>
    <string name="title_data_indonesia">Seluruh Data Indonesia</string>
    <string name="from_covid19">Dari Covid19</string>
    <string name="last_update">Update Terakhir</string>
    <string name="search_data">Cari Data......</string>
    <string name="country_provinsi">Country/Provinsi</string>
    <string name="information">Keterangan</string>
    <string name="cari">Cari</string>
</resources>
