<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.statistic.fragment.SearchDataIndoFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/information"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/cry"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/confirmed"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/smile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/recovered"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/emoji"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/deaths"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:textStyle="bold"/>
    </LinearLayout>



           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/list_rv_world"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:scrollbars="vertical"
                   tools:listitem="@layout/search_item_holder" />
           </LinearLayout>
    </LinearLayout>
