<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/tvid_prov_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                android:fontFamily="@font/oswald_variablefont_wght"
                tools:text="ID"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/cry" />
                <TextView
                    android:id="@+id/tv_confirmed_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmed"
                    android:textSize="18sp"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/smile"/>
                <TextView
                    android:id="@+id/tv_recovered_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textSize="18sp"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/emoji"/>
                <TextView
                    android:id="@+id/tv_deaths_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textSize="18sp"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvlist_provinsi_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:text="@string/country_provinsi"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>