<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:gravity="center|top"
    android:background="@color/black"
    tools:context=".ui.statistic.StatistikFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="30sp"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:layout_width="250dp"
            android:layout_height="100sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/statistik_ncovid_19"
            android:layout_marginBottom="20dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logogugas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvShowPieChart"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/piechartcolorful" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:text="@string/tampilkan_data"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearchData"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:text="@string/cari_data"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</LinearLayout>