<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center|top"
    android:background="#000">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="30sp"
            android:fontFamily="@font/oswald_variablefont_wght"
            android:layout_width="250dp"
            android:layout_height="100sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/bersatu_lawan_ncovid_19"
            android:layout_marginBottom="20dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logogugas"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="122dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:text="@string/welcome"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:layout_gravity="left"
                android:textSize="25sp"
                android:gravity="left"
                android:hint="@string/dummy_name"
                android:maxLength="10"
                android:ellipsize="end"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTodayUpdate"
        android:layout_width="350dp"
        android:layout_height="122dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:text="@string/indonesia"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/cry"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:gravity="left"
                    android:text="@string/confirmed"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/last_confirmed"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/smile"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:text="@string/recovered"/>
                <TextView
                    android:id="@+id/last_recover"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/emoji"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:gravity="left"
                    android:textColor="@color/white"
                    android:text="@string/deaths"/>
                <TextView
                    android:id="@+id/last_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right|bottom">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/indonesia"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvTodayWorldUpdate"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="122dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:text="@string/world"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/cry"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:gravity="left"
                    android:text="@string/confirmed"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/last_confirmed_world"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/smile"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:text="@string/recovered"/>
                <TextView
                    android:id="@+id/last_recover_world"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/emoji"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:gravity="left"
                    android:textColor="@color/white"
                    android:text="@string/deaths"/>
                <TextView
                    android:id="@+id/last_death_world"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:fontFamily="@font/oswald_variablefont_wght"
                    android:textColor="@color/white"
                    android:hint="@string/dummy_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right|bottom">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/globe"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvRumahSakitRujukan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="24dp"
            android:layout_gravity="left"
            android:foregroundGravity="left"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/hospital"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:textColor="@color/white"
                android:text="@string/rumah_sakit_rujukan"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvKontakLayanan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_gravity="right"
            android:foregroundGravity="right"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/customersupport"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_variablefont_wght"
                android:textColor="@color/white"
                android:text="@string/kontak_layanan"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>